# bt-ctl

./: Dockerfile  README.md  package-lock.json  package.json
backend/: Cargo.toml  build.rs
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BtDeviceItem.tsx  TitleBar.tsx
frontend/src/models/: bt_device.tsx
